[package]
name = "abest_os"
version = "0.0.1"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
linked_list_allocator = "0.9.1"
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
spin = "0.9.3"
uart_16550 = "0.2.18"
volatile = "0.4.4"
x86_64 = "0.14.9"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33  # (0x10 << 1) | 1
test-timeout = 300  # (in seconds)

[[test]]
name = "stack_overflow"
harness = false
